[package]
name = "todo-demo"
version = "0.1.0"
authors = ["Ayrat Badykov <ayratin555@gmail.com>"]

[dependencies]
log = "*"
env_logger = "*"
dotenv ="*"

hyper ="0.11"
futures = "0.1"
tokio-core ="0.1"
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

serde = "1.0"
serde_json="1.0"
serde_derive="1.0"

spectral = "0.6.0"